bug fix - testimonial on mobile width

--- a/assets/styles/lightbox.css
+++ b/assets/styles/lightbox.css
@@ -23,6 +23,12 @@
   margin-top: var(--pico-spacing);
 }
 
+@media (max-width: 577px) {
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+}
+
 .linkedin-embed iframe {
   border-radius: 6px;
   width: 100%;
